--- a/cen300 project.ipynb
+++ b/cen300 project.ipynb
@@ -152,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2a0085e2730>"
+       "<matplotlib.collections.PathCollection at 0x26e058b6670>"
       ]
      },
      "execution_count": 3,
@@ -405,7 +405,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2a008e19fd0>"
+       "<matplotlib.collections.PathCollection at 0x26e060eaf70>"
       ]
      },
      "execution_count": 11,
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "292c1e2e",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "array([[0.00124162]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2d7ec3e6",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
        "5      6        2260            230           2.8"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "5743b865",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "509db309",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "06787673",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
        "array([[2.04372306]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "d7b81e79",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "array([[0.00073866, 0.00641268]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
